--- a/zenro/frontend/src/css/smart-home-page.css
+++ b/zenro/frontend/src/css/smart-home-page.css
@@ -456,21 +456,6 @@ body {
     min-height: 300px;
 }
 
-/* Modal Overlay */
-.modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(0, 0, 0, 0.5);
-    /* Semi-transparent background */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
 /* Modal Container */
 .modal {
     background-color: beige;
